crates/ink/tests/ui/event/fail/multiple_topic_args.rs
#[ink::event]
pub struct Event {
    #[ink(topic)]
    #[ink(topic)]
    pub topic: [u8; 32],
}

fn main() {}