crates/ink/tests/ui/event/fail/multiple_topic_args.stderr
error: Only a single `#[ink(topic)]` attribute allowed.
 --> tests/ui/event/fail/multiple_topic_args.rs:4:11
  |
4 |     #[ink(topic)]
  |           ^^^^^
